Extract GUI application to the separate class