@@ -56,11 +56,14 @@ repositories {
 dependencies {
     compile 'com.jfoenix:jfoenix:9.0.9'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
-    compile 'ch.qos.logback:logback-classic:1.1.7'
-//    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.apache.commons:commons-lang3:3.5'
     compile 'com.1stleg:jnativehook:2.1.0'
+
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'org.slf4j:slf4j-jdk14:1.7.25'
+//    compile 'org.apache.logging.log4j:log4j-core:2.13.0'
+//    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.0'
 
     compile 'de.jensd:fontawesomefx-emojione:2.2.7-2'
     compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
@@ -79,19 +82,21 @@ dependencies {
 
     compile group: 'org.openpnp', name: 'opencv', version: '3.4.2-1'
 
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.10.0.pr2"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.10.1"
+
 
 }
 
 mainClassName = 'automationBoot/com.patres.automation.Main'
-jar {
-    manifest {
-        attributes "Main-Class": "com.patres.automation.Main"
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
+//jar {
+//    manifest {
+//        attributes "Main-Class": "com.patres.automation.Main"
+//    }
+//    from {
+//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+//    }
+//}
+
 
 compileKotlin {
     kotlinOptions {
@@ -101,5 +106,27 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = "11"
+    }
+}
+
+run {
+    jvmArgs = [
+        "--add-opens=java.base/java.lang=opencv",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+        "--add-opens=javafx.controls/javafx.scene.control=automationBoot"
+    ]
+}
+
+jlink {
+    addExtraDependencies("javafx")
+    launcher {
+        name = 'automationBoot'
+        jvmArgs = [
+                "--add-opens=java.base/java.lang=opencv",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+                "--add-opens=javafx.controls/javafx.scene.control=automationBoot"
+        ]
     }
 }
